Had forgotten to add id=query to the search bar in the first commit. Corrected it.

--- a/front.html
+++ b/front.html
@@ -17,7 +17,7 @@
         <input type="radio" class="Criteria" id="byAuthor">
         <label for="byAuthor">By author</label>
         <br>
-        <input type="text" placeholder="Enter search here.">
+        <input type="text" placeholder="Enter search here." id="query">
         <br>
         <input type="submit">Search </input>
     </form>
