Implemented dynamic query string building process. Also modified html to fit javascript code.

--- a/front.html
+++ b/front.html
@@ -11,9 +11,9 @@
     <hr>
     <h3>You can search by title or keyword, by author, or both!</h3>
     <form id="searchForm">
-        <input type="text" class= "Query" placeholder="Title or keyword" id="Title">
+        <input type="text" class= "Query" placeholder="Title or keyword" id="Title" data-param="q=">
         <br>
-        <input type="text" class= "Query" placeholder="Author" id="Author">
+        <input type="text" class= "Query" placeholder="Author" id="Author" data-param="inauthor:">
         <br>
         <input type="submit"></input>
     </form>
