--- a/front.html
+++ b/front.html
@@ -4,6 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Search</title>
+    <style>
+        body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+}
+
+h1 {
+    color: #333;
+}
+
+h3 {
+    color: #555;
+}
+
+#searchForm {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    width: 80%;
+}
+
+#searchForm input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#searchForm input[type="submit"] {
+    padding: 10px 20px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#searchForm input[type="submit"]:hover {
+    background-color: #218838;
+}
+
+#Results {
+    width: 80%;
+    margin-top: 20px;
+}
+
+.book {
+    background-color: #fff;
+    padding: 15px;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 10px;
+}
+
+.book:last-child {
+    border-bottom: none;
+}
+
+.book h3 {
+    font-size: 1.2em;
+    margin: 0;
+    color: #333;
+}
+
+.book p {
+    color: #666;
+    font-size: 0.9em;
+    margin: 5px 0;
+}
+
+.book img {
+    max-width: 100px;
+    height: auto;
+    margin-right: 15px;
+    vertical-align: middle;
+}
+
+.book .book-content {
+    display: flex;
+    align-items: center;
+}
+
+.book .book-text {
+    flex: 1;
+}
+
+    </style>
 </head>
 
 <body>
